<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/seeAll"
            android:title="@string/listBooks"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"/>
        <item
            android:id="@+id/add"
            android:title="@string/add"
            android:icon="@drawable/ic_add_black_24dp"/>
        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/ic_search_black_24dp"/>
        <item
            android:id="@+id/export"
            android:title="@string/export"
            android:icon="@drawable/ic_file_download_black_24dp"
            />
        <item
            android:id="@+id/seeExport"
            android:title="@string/seeExport"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            />
    </group>
</menu>